<resources>
    <string name="app_name">Elektronik</string>
    <string name="name_iphone11promax">Iphone 11 Promax</string>
    <string name="jenis_iphone11promax">Applle</string>
    <string name="deskripsi_iphone11promax">Operating System iOS 13\n \n Prosessor : Chip A13 Bionic\n Camera Triple 12MP Ultra Wide, Wide, and Telephoto cameras TrueDepth Camera 12MP camera Sensors Face ID\n Kapasitas Baterai : 3500 mAh\n Layar : Super Retina XDR display 6.5 Inch (diagonal) all‑screen OLED Multi‑Touch.</string>
    <string name="name_samsung">Samsung Galaxy A72</string>
    <string name="jenis_samsung">Adroid</string>
    <string name="deskripsi_samsung">• Resolution :1080 x 2400 pixels, 20:9 ratio (~393 ppi density)\n Protection :Unspecified\n OS :Android 11, One UI 3.1\n Chipset :Qualcomm SM7225 Snapdragon 750G (8 nm)\n• CPU :Octa-core (2x2.2 GHz Kryo 570 dan 6x1.8 GHz Kryo 570)"• Size: 6.43 inches\n • Resolution: 1080 x 2400 pixels\n• Main Camera : 48MP + 8MP + 2MP + 2MP, Front Camera : 8MP + 2MP\n • Battery: Li-Po 4000 mAh</string>
    <string name="name_opporeno">OPPO Reno4 F Smartphone</string>
    <string name="jenis_opporeno">Samatphone</string>
    <string name="deskripsi_opporeno">• OS: Android 10, ColorOS 7.2\n</string>
    <string name="name_nokia">Nokia 110 Handphone - Black</string>
    <string name="jenis_nokia">Hanphone</string>
    <string name="deskripsi_nokia">Ukuran layar : 1.8 Inch 128 x 160 piksel (~20.2% screen-to-body ratio)\n Memori : RAM 256 MB dan internal 10 MB\n Terdapat slot micro SD : Up to 32 GB\n Keypad alfanumeriknya yang dilapisi karet sehingga nyaman untuk Anda gunakan saat mengetik\n Terbuat dari bahan plastik berkualitas pada bagian casing.• Chrome OS™\n• 11.6\ diagonal, HD (1366 x 768), anti-glare, 220 nits, 45% NTSC\n • 4 GB LPDDR4-3733 MHz RAM (onboard)\n • 32 GB eMMC\n • The Chromebook built for schools and designed for learning\n • Intel® UHD Graphics 600</string>
    <string name="name_accer">Accer</string>
    <string name="jenis_accer">Intel</string>
    <string name="deskripsi_accer">• Intel® Celeron® processor\n</string>
    <string name="name_lenovo">Lenovo</string>
    <string name="jenis_lenovo">Intel</string>
    <string name="deskripsi_lenovo">laptop lenovo thinkpad t420 i5 ram 4gb hdd 320gb\n Spesifikasi : \n - Core i5-2520M @2,50 Ghz \n - RAM DDR3 4.0 GB\n - HARDISK 320 GB SATA \n- LAN/WIFI/USB\n - DVDRW/CAR REARDER \n- Esata/DVI PORT\n- VGA INTEL HD3000 \n- LAYAR LED 14.1 INCH \n- WINT 7 PRO 64 BIT ORI \n\nKETERANGAN LAPTOP \n- KONDISI NORMAL \n - CASING 95- 97 %\n-GARANSI DISTRIBUTOR 1BULAN \n\nBARANG YANG SUDAH DIBELI TIDAK DAPAT DIKEMBALIKAN DANA BILA ADA KEKELIRUAN BOLEH DITUKAR BARANG KEMBALI"Notebook TOSHIBA DYNABOOK C40H\n +Intel Core I3-1005G1\nDDR 4 4GB\n256GB SSD\nLayar 14\n WIN 10 Ori\nGaransi Resmi Dari Toshiba Indonesia\nGaransi Laptop, Adaptor dan Baterai Selama 1th.</string>
    <string name="name_toshiba">Toshiba</string>
    <string name="jenis_toshiba">Intel</string>
    <string name="deskripsi_toshiba">Notebook TOSHIBA DYNABOOK C40H /I3-1005G1/4GB/256GB SSD/14 WIN 10 \n</string>
    <string name="name_hp">HP</string>
    <string name="jenis_hp">Intel</string>
    <string name="deskripsi_hp">HP 14s-cf2516TU Laptop - Silver N4020 / 14\n LED HD SVA 220 Nits / 4GB / 256GB SSD / UMA / Win10 / OHS 2019 / Backlit KB] FREE Bag\n"This slim, ultra-portable laptop delivers reliable performance, and makes it easy to stay social, productive, and connected to what matters with a long-lasting battery life. The micro-edge display gives you lots to look at with more screen in a smaller frame.\n" +\nSleek. Slim. Stylish design.\nDesigned for portability, this lightweight laptop has a micro-edge display with ultra-narrow bezel, giving you lots of screen in a smaller frame.\n\nResponsive and reliable performance.\nWith the latest Intel® Core™ processor and a super responsive precision touch pad – you’ve got the power to surf, stream, and do more like never before.\n\nStay Connected and Entertained\nWith long-lasting battery life and fast-charge technology, this laptop lets you work and play all day. Includes hard drive storage to store photos, videos, and music – plus a USB-C™ port ready for the future of connectivity.\n\nIntel® Celeron N4020 processor\nWindows 10 Home 64\n14\" diagonal, HD (1366 x 768), micro-edge, BrightView, 220 nits, 45% NTSC\n4 GB DDR4-2666 SDRAM (1 x 4 GB)\n256GB SATA HDD\nDependable power. Designed to go.\nAMD Radeon™ 620 Graphics (2 GB GDDR5 dedicated)\n1 SuperSpeed USB Type-C® 5Gbps signaling rate; 2 SuperSpeed USB Type-A 5Gbps signaling rate; 1 HDMI 1.4b; 1 RJ-45; 1 AC smart pin; 1 headphone/microphone combo\nUp to 7 hours and 15 minutes "ASUS TUF Gaming A15 FA506: Laptop Gaming Bertenaga dengan AMD Ryzen Terbaru ASUS TUF Gaming A15 FA506 merupakan laptop gaming yang memiliki performa dan juga durabilitas tinggi.\n Laptop ini sangat cocok untuk gamers profesional yang ingin memenangkan pertandingan. Kemudian, laptop ASUS TUF Gaming A15 memiliki ukuran 359.8 x 256 x 22.8 mm dan berat sekitar 2.3 Kg.\n" +\nLaptop ini hadir dengan sasis yang lebih ringan dan ringkas dibandingkan dengan seri pendahulunya. Tak hanya itu saja, ASUS TUF Gaming A15 FX506 dibekali dengan baterai besar yang bertujuan agar Anda dapat menggunakan laptop ini untuk waktu yang lama yakni hingga mencapai 8.7 jam. Meskipun performanya kencang, laptop ini tetap tampil estetis. Laptop gaming ASUS ini tampil sangat elegan dan juga sleek.\n Kelebihan Laptop ASUS TUF Gaming A15 FA506 Ditenagai prosesor AMD Ryzen generasi terbaru. Chip grafis NVIDIA GeForce RTX 3050 yang mampu memberikan performa gaming optimal. Layar 15.6 inci FHD dengan refresh rate 144 Hz. Lolos uji standar militer. Sistem pendingin yang memastikan performa tingginya dapat terjaga." +Tambahkan air soda di atasnya. Beri potongan jeruk nipis. Sajikan.</string>
    <string name="name_assus">Assus</string>
    <string name="jenis_assus">Intel</string>
    <string name="deskripsi_assus">Asus TUF FA506IC-R735B6T-O Gaming Laptop AMD 8 Core Ryzen 7-4800H/ RTX3050-4GB/ 8GB/ 512GB SSD/ Win10/ 15.6\" Slim IPS FHD/ 144Hz/ Microsoft Office\n</string>
    <string name="name_lg">LG</string>
    <string name="jenis_lg">Smart TV</string>
    <string name="deskripsi_lg"> Display : 43 Inch FullHD\n\ • TV Type : Smart TV\n• Resolution : 1920 x 1080p\n• Processor : Quad-Core\n• Active HDR : Yes</string>
    <string name="name_politron">Politron</string>
    <string name="jenis_politron">TV Led</string>
    <string name="deskripsi_politron">• TV LED\n"• Didesain slim\n• Layar : 32 Inch\n• Resolusi : HD ready\n• Port : 3 port HDMI dan slot USB 2.0", R.drawable.t_poloytron));
        televisis.add(new Televisi("Toshiba", "Tv LED", "Ukuran Layar : 43 Inch\nResolusi Layar : FHD\nSpeaker Output : 8W + 8W\nDolby Version : Dolby Digital Plus\nKonsumsi Daya : 60 Watt</string>
    <string name="teknologi">Teknologi</string>
    <string name="jenis_elektronik">Jenis Elektronik</string>
    <string name="deskrips">Deskripsi</string>
    <string name="universitas_hamzanwadi">UNIVERSITAS HAMZANWADI</string>
    <string name="fakultas_teknik">Fakultas Teknik</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="name_vira_urbayana">Name : Vira Urbayana</string>
    <string name="alamat_masbagik">Alamat : Masbagik</string>
    <string name="nim_200602029">Nim : 200602029</string>
    <string name="hoby_travelling">Hoby : Travelling</string>
    <string name="daftar_ras_hewan">Daftar Ras Hewan</string>
    <string name="hanphone1">Hanphone</string>
    <string name="laptop">Laptop</string>
    <string name="televisi">Televisi</string>
</resources>